--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,5 +61,59 @@
 .bt:hover {
   background-color: #ff7875;
 }
+ /***design page****/
+ .editor-container {
+  display: flex;
+  height: 100vh;
+}
+
+.sidebar {
+  width: 25%; /* Sidebar takes up less than half the page */
+  background-color: #f4f4f4;
+  padding: 10px;
+  border: 2px solid black;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 5px;
+  gap: 5px; /* Adds spacing between properties panel and canvas area */
+}
+
+.properties-panel {
+  height: 10%;
+ 
+  padding: 5px;
+  border: 2px solid black;
+}
+
+.canvas-container {
+  position: relative;
+  flex: 1;
+  background-color: #ffffff;
+  border: 2px solid black;
+  padding: 5px;
+}
+
+.canvas-area {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+}
+
+.save-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 1; /* Ensures the button stays above the canvas content */
+}
 
 
