image uploading section edited

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,3 +126,9 @@
   cursor: pointer;
   z-index: 1; /* Ensures the button stays above the canvas content */
 }
+
+/* for resizing*/
+.react-resizable {
+  position: relative;
+  display: inline-block;
+}
