--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,6 +90,26 @@
   gap: 2px;
 }
 
+/* for animations ,stickers,GIF*/
+.animated-text.bounce {
+  animation-name: bounce;
+  animation-timing-function: ease;
+}
+.animated-text.fade {
+  animation-name: fadeIn;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+  40% { transform: translateY(-20px); }
+  60% { transform: translateY(-10px); }
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
 
 .main-content {
   display: flex;
