--- a/client/src/index.css
+++ b/client/src/index.css
@@ -349,6 +349,7 @@
 }
 
 .template-card {
+  position: relative;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -369,10 +370,16 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+  display: block;
 }
 
 .template-info {
   padding: 10px;
+  background-color: rgba(255, 255, 255, 0.8); /* Optional background */
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .template-info h3 {
@@ -386,7 +393,7 @@
   font-size: 0.9rem;
 }
 /***print page***/
-/* src/pages/PrintOrderPage.css */
+/* PrintOrderPage */
 
 /* Container for the print order page */
 .print-order-container {
