--- a/client/src/pages/Register.css
+++ b/client/src/pages/Register.css
@@ -4,9 +4,10 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: linear-gradient(135deg, #6dd5ed 0%, #2193b0 100%);
+  background: linear-gradient(135deg, #d5cada 0%, #d5bbd4 100%);
   padding: 20px;
   box-sizing: border-box;
+  height: 50vh;
 }
 
 /* Form Wrapper */
@@ -54,7 +55,7 @@
 .btn {
   width: 100%;
   height: 45px;
-  background-color: #2193b0;
+  background-color:#684B74 ;
   border: none;
   border-radius: 6px;
   color: #ffffff;
