--- a/client/src/index.css
+++ b/client/src/index.css
@@ -83,7 +83,7 @@
   /* Sidebar takes up less than half the page */
   background-color: #f4f4f4;
   padding: 10px;
-  border: 2px solid black;
+  
   overflow-y: hidden; 
   overflow-x: hidden; 
 
@@ -136,7 +136,7 @@
   overflow-y: auto;          
   border: 2px solid black;
   background-color: #f9f9f9;
-  border-radius: 8px;
+  
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
   color: #111111;
@@ -250,8 +250,10 @@
   align-items: center;
   background-color: #ffffff;
   border: 2px solid black;
+  
   padding: 5px;
   overflow: hidden;
+ 
 }
 
 .canvas-area {
@@ -468,7 +470,12 @@
 .editor-container{
   height: 92vh;;
 }
-
+@media (max-width: 600px) {
+  .editor-container {
+      flex-direction: column;
+      height: auto;
+  }
+}
 /* General Styling */
 body {
   font-family: Arial, sans-serif;
